--- a/Pages/WelcomePage.xaml
+++ b/Pages/WelcomePage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:wcheck.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="WelcomePage" Background="White">
+      Title="Главная">
 
     <Grid>
         
