--- a/Styles/ComboBoxStyle.xaml
+++ b/Styles/ComboBoxStyle.xaml
@@ -158,7 +158,7 @@
                             <Setter Property="Foreground" Value="#713313"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Foreground" Value="#1f1f1f"/>
+                            <Setter Property="Foreground" Value="#686868"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
