--- a/Pages/WelcomePage.xaml
+++ b/Pages/WelcomePage.xaml
@@ -8,7 +8,213 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Главная">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.7*"/>
+            <ColumnDefinition Width="0.6*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="150"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
+              Margin="10 10 5 0" Background="#dfdfdf">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="1"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
+                          CanContentScroll="False">
+                <StackPanel x:Name="uiStackPanelShells"/>
+            </ScrollViewer>
+
+            <Grid Grid.Row="1" Background="#4c4c4c" Margin="10 0"/>
+            
+            <TextBlock Grid.Row="2" Text="Модули" FontFamily="Arial"
+                       Foreground="#4c4c4c"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"/>
+        </Grid>
+
+        <Grid Grid.Row="2" Grid.Column="0" 
+      Margin="10 10 5 10" Background="#dfdfdf">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="1"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.6*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="2"
+                           Grid.Column="0"
+                           Text="IP адрес" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="5"
+                           />
+                <TextBlock Grid.Row="2"
+                           Grid.Column="1"
+                           Text="xxx.xxx.xxx.xxx" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="5"
+                           Name="uiTextBoxIp"
+                           MouseEnter="uiTextBoxIp_MouseEnter"
+                           MouseLeave="uiTextBoxIp_MouseLeave"
+                           MouseLeftButtonDown="uiTextBoxIp_MouseLeftButtonDown"
+                           MouseLeftButtonUp="uiTextBoxIp_MouseLeftButtonUp"
+                           ToolTip="Копировать"
+                           />
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0"
+                           Text="Имя ОС" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="5"
+                           />
+                <TextBlock Grid.Row="0"
+                           Grid.Column="1"
+                           Text="" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="5"
+                           Name="uiTextBoxOS"
+                           />
+                <TextBlock Grid.Row="1"
+                           Grid.Column="0"
+                           Text="Версия ОС" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="5"
+                           />
+                <TextBlock Grid.Row="1"
+                           Grid.Column="1"
+                           Text="" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="5"
+                           Name="uiTextBoxVersion"
+                           />
+                <TextBlock Grid.Row="3"
+                           Grid.Column="0"
+                           Text="Имя ПК" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="5"
+                           />
+                <TextBlock Grid.Row="3"
+                           Grid.Column="1"
+                           Text="" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="5"
+                           Name="uiTextBoxMachineName"
+                           />
+
+                <TextBlock Grid.Row="4"
+                           Grid.Column="0"
+                           Text="Пользователь" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Left"
+                           Margin="5"
+                           />
+                <TextBlock Grid.Row="4"
+                           Grid.Column="1"
+                           Text="" 
+                           FontFamily="Arial"
+                           Foreground="#1f1f1f"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Right"
+                           Margin="5"
+                           Name="uiTextBoxUser"
+                           />
+            </Grid>
+
+            <Grid Grid.Row="1" Background="#4c4c4c" Margin="10 0"/>
+
+            <TextBlock Grid.Row="2" Text="Информация о системе" FontFamily="Arial"
+               Foreground="#4c4c4c"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Center"/>
+        </Grid>
+
+        <Grid Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" 
+      Margin="5 10 10 10" Background="#dfdfdf">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="1"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
+                          CanContentScroll="False"
+                          VirtualizingStackPanel.IsVirtualizing="True"
+                          Name="uiScrollLogs">
+                <StackPanel x:Name="uiStackPanelLogs"
+                            VirtualizingStackPanel.IsVirtualizing="True"/>
+            </ScrollViewer>
+
+            <Grid Grid.Row="1" Background="#4c4c4c" Margin="10 0"/>
+
+            <TextBlock Grid.Row="2" Text="Журнал событий" FontFamily="Arial"
+               Foreground="#4c4c4c"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Center"/>
+        </Grid>
+
+        <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" 
+                           Margin="5 10 5 10" Background="#dfdfdf">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="1"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
+                    CanContentScroll="False"
+                    VirtualizingStackPanel.IsVirtualizing="True">
+                <StackPanel x:Name="uiStackPanelNews"
+                      VirtualizingStackPanel.IsVirtualizing="True"/>
+            </ScrollViewer>
+
+            <Grid Grid.Row="1" Background="#4c4c4c" Margin="10 0"/>
+
+            <TextBlock Grid.Row="2" Text="Новости" FontFamily="Arial"
+         Foreground="#4c4c4c"
+         VerticalAlignment="Center"
+         HorizontalAlignment="Center"/>
+        </Grid>
     </Grid>
 </Page>
